raffia/tests/error/scss/at-rule/warn/no-argument.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ no-argument.scss:1:6
  │
1 │ @warn;
  │      ^


